# UMass-Bot

./: .main.py.3701259876~  keep_alive.py  main.py  notifications_db.db  pyproject.toml
cmds/: clubs.py  events.py  notifications.py  paginator.py
